docs/v0.5.0/1-getting-started/roadmap.mdx
---
title: Roadmap
order: 4
---

We're constantly building new features into FRPC to improve its functionality and expand its ease of use.
We'd love to hear your feedback on these as well as any other ideas you have!
Also, if you have any questions, please feel free to join our [Discord Server](https://loopholelabs.io/discord) where
you can ask questions and get help from other FRPC developers.

# Currently In Development

These are the features that are actively being developed right now.

## RPC Streaming Support

RPC Streaming is one of the most important features of FRPC, and it's essential for anyone who wants to switch over from
GRPC. It allows you to multiple requests or responses without sending multiple RPCs.

This feature is actively being developed and should be available in the next few weeks.

# Planned Features

These are the features that we've planned to work on in the coming months. If any of these are important to you please
let us know! We use community feedback to plan our roadmap, and we also encourage contributors to submit their ideas
to the [Discord Server](https://loopholelabs.io/discord) so that we can discuss them with the community.

## JS/TS Support

Currently, FRPC is only compatible with `Golang{:.keyword}` but we plan to add support for JS and TS in the near future.
We know it's important to have an RPC framework that can be used across language boundaries so this is a big priority for us.